image visibility fixed

--- a/main02.css
+++ b/main02.css
@@ -140,6 +140,7 @@ img {
   position: relative;
   top: 5px;
   width: 100%;
+  visibility: none;
   /*border: 1px solid pink;*/
 }
 /*
